fix image stretch

--- a/_scss/layout/_header.scss
+++ b/_scss/layout/_header.scss
@@ -40,7 +40,7 @@ header.site-header {
     position: absolute;
     width: 100%;
     height: 100vh;
-    max-height: 1080px;
+    //max-height: 1080px;
     top: 0;
     left: 0;
   }
